feat: gabriel day (#21)
* feat: gabriel day

* feat: gabriel day (to lower case)

* feat: timezone fix

* feat: list not immutable

* fix: jpeg fix

* fix: fuck dates

* Revert "fix: fuck dates"

This reverts commit 76676edc6ef081e5bd9a4cc798a6bb56b0e8a3ca.

* feat: implement backup functionality for sources and templates.
added birthdays, added JxQueryBuilder

* Update src/main/java/com/boatarde/regatasimulator/util/FileUtils.java

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* Revert "Update src/main/java/com/boatarde/regatasimulator/util/FileUtils.java"

This reverts commit 5a44e9212d9782df248985790b028517094d7e0f.

* fix: change to long

* feat: 40mb

* feat: refactor backup functionality and introduce BackupService

---------

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>